Done till Skills page

--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,88 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+/* width */
+::-webkit-scrollbar {
+  width: 10px;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+/* Track */
+::-webkit-scrollbar-track {
+  background: #3c63ed;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: #888;
+  border-radius: 5px;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: #555;
+}
+
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  scroll-behavior: smooth;
+  color-scheme: dark;
+}
+
+.my-bg-dark-gradient {
+  /* background: linear-gradient(
+    109.6deg,
+    rgb(20, 30, 48) 11.2%,
+    rgb(36, 59, 85) 91.1%
+  ); */
+
+  background: linear-gradient(
+    109.6deg,
+    rgb(0, 6, 16) 11.2%,
+    rgb(0, 5, 72) 91.1%
+  );
+}
+
+.about-card {
+  background: linear-gradient(
+    109.6deg,
+    rgb(10, 15, 24) 11.2%,
+    rgb(45, 82, 119) 91.1%
+  );
+
+  box-shadow: rgba(5, 255, 251, 0.35) 0px 5px 15px;
+}
+
+.black-gradient {
+  background: #000000; /* fallback for old browsers */
+  background: -webkit-linear-gradient(
+    to right,
+    #434343,
+    #000000
+  ); /* Chrome 10-25, Safari 5.1-6 */
+  background: linear-gradient(
+    to right,
+    #434343,
+    #000000
+  ); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+}
+
+.violet-gradient {
+  /* background: #804dee;
+  background: linear-gradient(-90deg, #804dee 0%, rgba(60, 51, 80, 0) 100%);
+  background: -webkit-linear-gradient(
+    -90deg,
+    #804dee 0%,
+    rgba(100, 133, 233, 0) 100%
+  ); */
+
+  background: rgb(97, 226, 235);
+  background: linear-gradient(
+    180deg,
+    rgba(97, 226, 235, 0.8381477591036415) 5%,
+    rgba(67, 121, 192, 0.854954481792717) 22%,
+    rgba(97, 226, 235, 1) 88%
+  );
 }
