--- a/src/index.css
+++ b/src/index.css
@@ -61,7 +61,7 @@
 }
 
 .black-gradient {
-  background: #000000;
+  /* background: #000000;
   background: -webkit-linear-gradient(
     to right,
     #434343,
@@ -71,6 +71,13 @@
     to right,
     #434343,
     #000000
+  ); */
+
+  background: #000000;
+  background: linear-gradient(
+    to right,  
+    #122196,
+    #208da6
   );
 }
 
