--- a/src/index.css
+++ b/src/index.css
@@ -35,28 +35,29 @@
 .my-bg-dark-gradient {
   background: linear-gradient(
     109.6deg,
-    rgb(0, 6, 16) 11.2%,
-    rgb(0, 5, 72) 91.1%
+    rgb(9, 21, 23) 30%,
+    rgb(0, 1, 14) 70%
   );
+  border-bottom: 1px solid rgb(32, 30, 30);
 }
 
 .my-bg-bright-gradient {
   background: linear-gradient(
     109.6deg,
-    rgb(32, 38, 48) 11.2%, /* Slightly brighter than original rgb(0, 6, 16) */
-    rgb(32, 37, 132) 91.1% /* Slightly brighter than original rgb(0, 5, 72) */
+    rgb(32, 38, 48) 11.2%,
+    /* Slightly brighter than original rgb(0, 6, 16) */ rgb(32, 37, 132) 91.1%
+      /* Slightly brighter than original rgb(0, 5, 72) */
   );
   box-shadow: rgba(214, 131, 249, 0.35) 0px 5px 15px;
 }
 
-
 .about-card {
   background: linear-gradient(
     109.6deg,
-    rgb(10, 15, 24) 11.2%,
-    rgb(45, 82, 119) 91.1%
+    rgb(10, 15, 24) 20%,
+    rgb(0, 21, 40) 80%
   );
-  box-shadow: rgba(5, 255, 251, 0.35) 0px 5px 15px;
+  box-shadow: rgba(0, 105, 117, 0.35) 0px 5px 15px;
 }
 
 .black-gradient {
@@ -73,39 +74,29 @@
   ); */
 
   background: #000000;
-  background: linear-gradient(
-    to right,  
-    #122196,
-    #208da6
-  );
+  -webkit-box-shadow: 0px 0px 63px 6px rgba(121,134,135,1);
+-moz-box-shadow: 0px 0px 63px 6px rgba(121,134,135,1);
+box-shadow: 0px 0px 63px 6px rgba(121,134,135,1);
+border: 2px solid gray;
 }
 
-.my-bg-black-gradient{
-  background: #000000; 
-  background: -webkit-linear-gradient(
-    to right,
-    #434343,
-    #352b2b
-  ); 
-  background: linear-gradient(
-    to right,
-    #262222,
-    #434343
-  ); 
+.my-bg-black-gradient {
+  background: #000000;
+  background: -webkit-linear-gradient(to right, #434343, #352b2b);
+  background: linear-gradient(to right, #262222, #434343);
 }
 
 .violet-gradient {
   background: rgb(97, 226, 235);
   background: linear-gradient(
-    180deg,
-    rgba(97, 226, 235, 0.8381477591036415) 5%,
-    rgba(67, 121, 192, 0.854954481792717) 22%,
-    rgba(97, 226, 235, 1) 88%
+    150deg,
+    rgba(0, 149, 160, 0.838) 8%,
+    rgba(68, 87, 88, 0.855) 22%,
+    rgb(0, 0, 0) 88%
   );
-
 }
 
-.my-tagline-bg{
+.my-tagline-bg {
   background: linear-gradient(
     109.6deg,
     rgb(8, 5, 63) 11.2%,
@@ -113,7 +104,6 @@
   );
   box-shadow: rgba(5, 255, 251, 0.35) 1px 5px 15px 3px;
 }
-
 
 .border-animation-div {
   box-shadow: 16px 14px 20px #0000008c;
@@ -125,23 +115,21 @@
   align-items: center;
 }
 
-
-
-.border-animation-div::before{
+.border-animation-div::before {
   content: "";
   background-image: conic-gradient(
-      #1cf2f2 20deg,
-      #1168f5 40deg,
-      transparent 120deg
+    #1cf2f2 20deg,
+    #1168f5 40deg,
+    transparent 120deg
   );
-  
+
   width: 150%;
   height: 150%;
   position: absolute;
   animation: rotate 3s linear infinite;
 }
 
-.border-animation-div::after{
+.border-animation-div::after {
   background: #101010;
   border-radius: 10px;
   display: flex;
@@ -155,19 +143,13 @@
 }
 
 @keyframes rotate {
-  0%{
-      transform: rotate(0deg);
+  0% {
+    transform: rotate(0deg);
   }
-  100%{
-      transform: rotate(-360deg);
+  100% {
+    transform: rotate(-360deg);
   }
 }
-
-
-
-
-
-
 
 .bubbles-container {
   position: relative;
@@ -194,5 +176,23 @@
   100% {
     transform: translateY(-200px) scale(0);
     opacity: 0;
+  }
+}
+
+.navbar-mobile {
+  display: none;
+}
+
+.navbar-desktop {
+  display: flex;
+}
+
+@media (max-width: 1100px) {
+  .navbar-mobile {
+    display: flex;
+  }
+
+  .navbar-desktop {
+    display: none;
   }
 }
