--- a/src/index.css
+++ b/src/index.css
@@ -1,8 +1,13 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Bricolage+Grotesque:opsz,wght@12..96,200..800&display=swap");
 
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+body {
+  font-family: Bricolage Grotesque, sans-serif;
+  background: #030014;
+}
 
 /* width */
 ::-webkit-scrollbar {
@@ -35,8 +40,11 @@
 }
 
 .my-bg-dark-gradient {
-  background: linear-gradient(109.6deg, rgb(9, 21, 23) 30%, rgb(0, 1, 14) 70%);
-  border-bottom: 1px solid rgb(32, 30, 30);
+  /* background: linear-gradient(109.6deg, rgb(9, 21, 23) 30%, rgb(0, 1, 14) 70%);
+  border-bottom: 1px solid rgb(32, 30, 30); */
+
+  /* background: black; */
+  background: #030014;
 }
 
 .my-bg-bright-gradient {
@@ -97,8 +105,7 @@
 .my-tagline-bg {
   background: linear-gradient(
     109.6deg,
-    rgb(11, 15, 76) 91.1%
-    rgb(2, 1, 36) 11.2%,
+    rgb(11, 15, 76) 91.1% rgb(2, 1, 36) 11.2%
   );
   box-shadow: rgba(42, 226, 223, 0.35) 1px 5px 15px 3px;
 }
@@ -193,4 +200,29 @@
   .navbar-desktop {
     display: none;
   }
+}
+
+/* Outer circle with intense neon glow */
+.neon-glow-outer {
+  border: 2px solid rgba(255, 255, 255, 0.3);
+  box-shadow: 0 0 15px rgba(128, 77, 255, 0.6),
+    /* Light purple glow */ 0 0 25px rgba(153, 102, 255, 0.5),
+    /* Medium purple glow */ 0 0 35px rgba(179, 128, 255, 0.4),
+    /* Soft purple glow */ 0 0 50px rgba(204, 153, 255, 0.3),
+    /* Distant purple glow */ inset 0 0 20px rgba(128, 77, 255, 0.7); /* Inner soft glow */
+}
+
+/* Inner circle with softer neon glow */
+.neon-glow-inner {
+  border: 2px solid rgba(255, 255, 255, 0.2);
+  box-shadow: 0 0 10px rgba(128, 77, 255, 0.5),
+    /* Soft inner glow */ 0 0 20px rgba(153, 102, 255, 0.4),
+    /* Medium glow */ 0 0 30px rgba(179, 128, 255, 0.3); /* Fainter outer glow */
+}
+
+.neon-glow-inner-inner {
+  border: 2px solid rgba(255, 255, 255, 0.2);
+  box-shadow: 0 0 170px rgba(237, 77, 255, 0.5),
+    /* Soft inner glow */ 0 0 20px rgba(153, 102, 255, 0.4),
+    /* Medium glow */ 0 0 30px rgba(179, 128, 255, 0.3); /* Fainter outer glow */
 }
