--- a/src/index.css
+++ b/src/index.css
@@ -40,20 +40,11 @@ body {
 }
 
 .my-bg-dark-gradient {
-  /* background: linear-gradient(109.6deg, rgb(9, 21, 23) 30%, rgb(0, 1, 14) 70%);
-  border-bottom: 1px solid rgb(32, 30, 30); */
-
-  /* background: black; */
   background: #030014;
 }
 
 .my-bg-bright-gradient {
-  background: linear-gradient(
-    109.6deg,
-    rgb(32, 38, 48) 11.2%,
-    /* Slightly brighter than original rgb(0, 6, 16) */ rgb(32, 37, 132) 91.1%
-      /* Slightly brighter than original rgb(0, 5, 72) */
-  );
+  background: linear-gradient(109.6deg, rgb(32, 38, 48) 11.2%);
   box-shadow: rgba(214, 131, 249, 0.35) 0px 5px 15px;
 }
 
@@ -67,18 +58,6 @@ body {
 }
 
 .black-gradient {
-  /* background: #000000;
-  background: -webkit-linear-gradient(
-    to right,
-    #434343,
-    #000000
-  );
-  background: linear-gradient(
-    to right,
-    #434343,
-    #000000
-  ); */
-
   background: #000000;
   -webkit-box-shadow: 0px 0px 63px 6px rgba(121, 134, 135, 1);
   -moz-box-shadow: 0px 0px 63px 6px rgba(121, 134, 135, 1);
@@ -107,7 +86,8 @@ body {
     109.6deg,
     rgb(11, 15, 76) 91.1% rgb(2, 1, 36) 11.2%
   );
-  box-shadow: rgba(42, 226, 223, 0.35) 1px 5px 15px 3px;
+  box-shadow: rgba(140, 42, 226, 0.35) 1px 5px 15px 3px;
+  background-color: black;
 }
 
 .border-animation-div {
@@ -202,27 +182,14 @@ body {
   }
 }
 
-/* Outer circle with intense neon glow */
-.neon-glow-outer {
-  border: 2px solid rgba(255, 255, 255, 0.3);
-  box-shadow: 0 0 15px rgba(128, 77, 255, 0.6),
-    /* Light purple glow */ 0 0 25px rgba(153, 102, 255, 0.5),
-    /* Medium purple glow */ 0 0 35px rgba(179, 128, 255, 0.4),
-    /* Soft purple glow */ 0 0 50px rgba(204, 153, 255, 0.3),
-    /* Distant purple glow */ inset 0 0 20px rgba(128, 77, 255, 0.7); /* Inner soft glow */
-}
-
-/* Inner circle with softer neon glow */
-.neon-glow-inner {
-  border: 2px solid rgba(255, 255, 255, 0.2);
-  box-shadow: 0 0 10px rgba(128, 77, 255, 0.5),
-    /* Soft inner glow */ 0 0 20px rgba(153, 102, 255, 0.4),
-    /* Medium glow */ 0 0 30px rgba(179, 128, 255, 0.3); /* Fainter outer glow */
-}
-
-.neon-glow-inner-inner {
-  border: 2px solid rgba(255, 255, 255, 0.2);
-  box-shadow: 0 0 170px rgba(237, 77, 255, 0.5),
-    /* Soft inner glow */ 0 0 20px rgba(153, 102, 255, 0.4),
-    /* Medium glow */ 0 0 30px rgba(179, 128, 255, 0.3); /* Fainter outer glow */
+@keyframes gradientMove {
+  0% {
+    background-position: 0% 50%;
+  }
+  50% {
+    background-position: 100% 50%;
+  }
+  100% {
+    background-position: 0% 50%;
+  }
 }
